// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for Button Component should render Button  default theme 1`] = `
<div>
  <button
    class="sc-AxiKw jXfssU"
    type="submit"
  >
    <span
      class="sc-AxjAm eliavK"
    />
  </button>
</div>
`;

exports[`Test for Button Component should render Button  success theme 1`] = `
<div>
  <button
    class="sc-AxirZ gcUomq"
    type="submit"
    width="20"
  />
</div>
`;

exports[`Test for Button Component should render Button  warning theme 1`] = `
<div>
  <button
    class="sc-AxirZ bULvc"
    type="submit"
  />
</div>
`;

exports[`Test for Button Component should render Button with dark theme 1`] = `
<div>
  <button
    class="sc-AxiKw ifYruF"
    type="submit"
    width="30"
  >
    <span
      class="sc-AxjAm eliavK"
    />
  </button>
</div>
`;

exports[`Test for Button Component should render Button with no theme and rounded 1`] = `
<div>
  <button
    class="sc-AxirZ ehOcuz"
    type="submit"
    width="30"
  />
</div>
`;
